--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,70 @@
-<p>home works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#"><img src="../../assets/proinstruct logo.jpg" alt=""></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav  ms-auto ">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Student signup</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Tutor signup</a>
+        </li>
+        
+      </ul>
+    </div>
+  </div>
+</nav>
+<section id="banner">
+<div class="container">
+  <div class="row">
+    <div class="col-md-6 ">
+    <p class="bigtext">Welcome to ProInstruct</p>
+    <p><h5>We focus on  teaching our students the fundamentals of latest technologies from great industrial experts</h5>
+   
+    </div>
+
+    <div class="col-md-6 text-centre">
+      <img src="../../assets/Webinar-bro.png" class="image-fluid" alt="" height="400" width="ms-auto"></div>
+    </div>
+
+
+<section  id ="services">
+  <div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Become an Instructor
+                </h4>
+                <p class="card-text">The Glint People Success Platform gives you visibility into the health of your future and guides effective action.</p>
+                <a href="#" class="btn btn-primary">Start teaching</a>
+              </div>
+            </div>
+        </div>
+        <div class="col-md-4">
+            <div class="card">
+              <div class="card-body">
+                <h4 class="card-title">Learn from industrial experts </h4>
+                <p class="card-text">Start learning with industrial experts learn the skills you need to succeed .
+                </p>
+                <a href="#" class="btn btn-primary">Start learning today</a>
+              </div>
+            </div>
+        </div>
+        <div class="col-sm-4">
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title"> Practical Learning</h4>
+              <p class="card-text">We include trading simulations and case studies to make sure that your learning is practical..</p>
+              <a href="#" class="btn btn-primary">choose your career</a>
+            </div>
+          </div>
+      </div>
+  
+  
